# synthesizer

./: .gitignore  README.md  makefile  todos.txt
docs/: index.html
docs/documentation/: index.html
docs/guide/: design.css  index.html  index.md
scripts/: test-graphics.sh
src/: .gitignore  main-gui.c  main-gui.cpp  main-tui.c  main.cpp  run.sh  test.sh
src/core/: char_list.c  char_list.h  core.c  core.h  extensions.c  extensions.h  file.c  file.h  list.c  list.h  string.c  string.h  string_list.c  string_list.h  time.c  time.h
src/core/test/: test-core.c
src/graphics/: CMakeLists.txt  test.cpp  test.h
src/graphics/components/: widget.h  window.cpp  window.h
src/graphics/components/mixins/: property-holder.cpp
src/graphics/tests/: example.cpp  test-widget.cpp  test-window.cpp
src/gui/: CMakeLists.txt  button.c  button.h  gui.c  gui.h  layout.c  layout.h  test.h  widget.c  widget.h  window.c  window.h
src/gui/components/: window.h
src/gui/components/mixins/: property-holder.h
src/sound/: sound.c  sound.h  wav.c  wav.h
src/sound/test/: test-sound.c
src/tui/: args.c  args.h  arguments.c  arguments.h  tui.c  tui.h
src/tui/test/: test-tui.c
tools/: generate-widget-template.py  test-gui.sh  test-tui-sound-core.sh
